# hoiku-plan-docs

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/hoiku_plan_docs/: auth.py  contracts.py  main.py  models.py  serializers.py  store.py
app/hoiku_plan_docs/services/: bunrei.py  generators.py
app/hoiku_plan_docs/static/: styles.css
app/hoiku_plan_docs/templates/: base.html  home.html
app/hoiku_plan_docs/templates/annual_plans/: form.html
app/hoiku_plan_docs/templates/bunrei/: _candidate_groups.html  annual.html  facility_new.html  monthly.html
app/hoiku_plan_docs/templates/daily_plans/: form.html
app/hoiku_plan_docs/templates/documents/: _list.html  detail.html  edit.html  list.html
app/hoiku_plan_docs/templates/monthly_plans/: form.html
app/hoiku_plan_docs/templates/staff_auth/: login.html
app/hoiku_plan_docs/templates/weekly_plans/: form.html
app/hoiku_plan_docs/web/: __init__.py  templating.py
app/hoiku_plan_docs/web/routers/: bunrei.py  documents.py  home.py  plans.py  staff_auth.py
deploy/docker/: entrypoint.sh
deploy/dockge/: .env.example  compose.yaml
deploy/truenas-dockge/: .env.example  .env.github.example  compose.github.yaml  compose.stack-local.yaml  compose.yaml
docs/: deploy-dockge-cloudflare.md  deploy-truenas-dockge-cloudflare.md  integration-contract.md
gen_bunnrei/: README.md  framework.py  generate.py  models.py  sample.jsonl  templates.py
tests/: test_app.py
