[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hoiku-plan-docs"
version = "0.1.0"
description = "Document creation feature prototype for open-hoikuict beta"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8",
]

[project.scripts]
hoiku-plan-docs = "hoiku_plan_docs.main:run"

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.package-data]
hoiku_plan_docs = [
  "static/**/*.css",
  "templates/**/*.html",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
